syntax = "proto3";

option go_package = "github.com/common/dto/protos/v1";

import "user.proto";

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (UserReply) {}
    rpc FindByLoginID (FindByLoginIDRequest) returns (UserReply) {}
}

message FindByLoginIDRequest {
    string tid = 1;
    string idToken = 2;
    string tokenSource = 3;
}

message RegisterUserRequest {
    string loginSource = 1;
    User document = 2;
}

message UserReply {
    int64 status = 1;
    optional string message = 2;
    optional int64 count = 3;
    optional int64 offset = 4;
    optional int64 limit = 5;
    optional User document = 6;
    repeated User documents = 7;
}